syntax = "proto3";

package kpd;

// KPD Lookup Service
// Provides lookup and validation for Croatian KLASUS product classification codes
service KPDLookupService {
  // Lookup a KPD code by code value
  rpc LookupCode(LookupCodeRequest) returns (LookupCodeResponse);

  // Validate if a KPD code exists and is active
  rpc ValidateCode(ValidateCodeRequest) returns (ValidateCodeResponse);

  // Search KPD codes by description
  rpc SearchCodes(SearchCodesRequest) returns (SearchCodesResponse);
}

// Lookup Code Request
message LookupCodeRequest {
  string kpd_code = 1;
}

// Lookup Code Response
message LookupCodeResponse {
  bool found = 1;
  KPDCodeInfo code_info = 2;
}

// KPD Code Information
message KPDCodeInfo {
  string kpd_code = 1;
  string description = 2;
  int32 level = 3;
  string parent_code = 4;
  bool active = 5;
  string effective_from = 6;  // ISO date string
  string effective_to = 7;    // ISO date string (empty if still active)
}

// Validate Code Request
message ValidateCodeRequest {
  string kpd_code = 1;
}

// Validate Code Response
message ValidateCodeResponse {
  bool valid = 1;
  string error_message = 2;
}

// Search Codes Request
message SearchCodesRequest {
  string query = 1;
  int32 limit = 2;  // Max results (default: 100)
}

// Search Codes Response
message SearchCodesResponse {
  repeated KPDCodeInfo codes = 1;
  int32 total_results = 2;
}
